Fixing dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,11 @@
 @import "./theme.css";
 @import "./components.css";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  color-scheme: dark;
 }
 
 /* Define scrollbar appearance for the entire app */
